Added FreeRTOS support

--- a/lib/config/meson.build
+++ b/lib/config/meson.build
@@ -1,5 +1,5 @@
 project_inc += include_directories('.')
-project_src += [
+frdmkl46z_config_src = [
     files('pin_mux.c'),
     files('clock_config.c'),
     files('board.c'),
