Update to FreeRTOS version

--- a/lib/freertos/meson.build
+++ b/lib/freertos/meson.build
@@ -2,24 +2,34 @@
 defines += ['-DFSL_RTOS_FREE_RTOS']
 
 project_inc += [
-    include_directories('.'),
-    include_directories('lib/FreeRTOS/portable/GCC/ARM_CM0'),
-    include_directories('lib/include/private'),
-    include_directories('lib/include'),
+    include_directories('include'),
+    include_directories('portable/GCC/ARM_CM0'),
 ]
 
 freertos_src = [
-    files('lib/FreeRTOS/event_groups.c'),
-    files('lib/FreeRTOS/list.c'),
-    files('lib/FreeRTOS/queue.c'),
-    files('lib/FreeRTOS/stream_buffer.c'),
-    files('lib/FreeRTOS/tasks.c'),
-    files('lib/FreeRTOS/timers.c'),
-    files('lib/FreeRTOS/portable/GCC/ARM_CM0/fsl_tickless_systick.c'),
-    files('lib/FreeRTOS/portable/GCC/ARM_CM0/port.c'),
-    files('lib/FreeRTOS/portable/MemMang/heap_1.c'),
-    files('lib/FreeRTOS/portable/MemMang/heap_2.c'),
-    files('lib/FreeRTOS/portable/MemMang/heap_3.c'),
-    files('lib/FreeRTOS/portable/MemMang/heap_4.c'),
-    files('lib/FreeRTOS/portable/MemMang/heap_5.c'),
+    # Source files
+    files('src/list.c'),
+    files('src/stream_buffer.c'),
+    files('src/timers.c'),
+    files('src/queue.c'),
+    files('src/croutine.c'),
+    files('src/tasks.c'),
+    files('src/event_groups.c'),
+
+    # Heap implementations
+    files('portable/MemMang/heap_1.c'),
+    files('portable/MemMang/heap_4.c'),
+    files('portable/MemMang/heap_3.c'),
+    files('portable/MemMang/heap_5.c'),
+    files('portable/MemMang/heap_2.c'),
+
+    # Common
+    files('portable/Common/mpu_wrappers.c'),
+
+    # ARM CM0 GCC
+    files('portable/GCC/ARM_CM0/port.c'),
+    files('portable/GCC/ARM_CM0/fsl_tickless_systick.c'),
+
+    # low_power_tickless
+    files('portable/low_power_tickless/fsl_tickless_lptmr.c'),
 ]
