--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,1 @@
-# Add main file
-if use_freertos
-    project_src += files('freertos_hello_world.c')
-else
-    project_src += files('simple_hello_world.c')
-endif
+project_src += [files('main.c')]
